<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    app:layoutDescription="@xml/fragment_categorie_scene"
    tools:context=".présentation.vue.Fragment_catégorie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#47E2D0"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Choisir Une Carte"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quitter" />

        <TextView
            android:id="@+id/quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="Quitter"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/titre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="409dp"
        android:layout_height="40dp"

        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:src="@drawable/sportoff"
            android:tag="sport"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:src="@drawable/histoireoff"
            android:tag="histoire"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:src="@drawable/geographieoff"
            android:tag="geographie"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:src="@drawable/programmationoff"
            android:tag="programmation"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:src="@drawable/animauxoff"
            android:tag="animaux"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:src="@drawable/scienceoff"
            android:tag="science"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="356dp"
        android:layout_height="537dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn0"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="143dp"
                    android:layout_height="144dp"
                    android:background="?selectableItemBackgroundBorderless"

                    android:src="@drawable/categoriebg"
                    android:tag="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img0"
                    android:layout_width="49dp"
                    android:layout_height="61dp"
                    android:src="@drawable/logo"
                    android:tag="img0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn0"
                    app:layout_constraintStart_toStartOf="@+id/btn0"
                    app:layout_constraintTop_toTopOf="@+id/btn0"
                    app:layout_constraintVertical_bias="0.355" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn1"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="143dp"
                    android:layout_height="144dp"
                    android:onClick="onClick"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/categoriebg"
                    android:tag="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="49dp"
                    android:layout_height="61dp"
                    android:src="@drawable/logo"
                    android:tag="img1"
                    app:layout_constraintBottom_toBottomOf="@+id/btn1"
                    app:layout_constraintEnd_toEndOf="@+id/btn1"
                    app:layout_constraintStart_toStartOf="@+id/btn1"
                    app:layout_constraintTop_toTopOf="@+id/btn1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn2"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="143dp"
                    android:layout_height="144dp"
                    android:onClick="onClick"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/categoriebg"
                    android:tag="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="49dp"
                    android:layout_height="61dp"
                    android:src="@drawable/logo"
                    android:tag="img2"
                    app:layout_constraintBottom_toBottomOf="@+id/btn2"
                    app:layout_constraintEnd_toEndOf="@+id/btn2"
                    app:layout_constraintStart_toStartOf="@+id/btn2"
                    app:layout_constraintTop_toTopOf="@+id/btn2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn3"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="143dp"
                    android:layout_height="144dp"
                    android:onClick="onClick"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/categoriebg"
                    android:tag="3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="49dp"
                    android:layout_height="61dp"
                    android:src="@drawable/logo"
                    android:tag="img3"
                    app:layout_constraintBottom_toBottomOf="@+id/btn3"
                    app:layout_constraintEnd_toEndOf="@+id/btn3"
                    app:layout_constraintStart_toStartOf="@+id/btn3"
                    app:layout_constraintTop_toTopOf="@+id/btn3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn4"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="143dp"
                    android:layout_height="144dp"
                    android:onClick="onClick"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/categoriebg"
                    android:tag="4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="49dp"
                    android:layout_height="61dp"
                    android:src="@drawable/logo"
                    android:tag="img4"
                    app:layout_constraintBottom_toBottomOf="@+id/btn4"
                    app:layout_constraintEnd_toEndOf="@+id/btn4"
                    app:layout_constraintStart_toStartOf="@+id/btn4"
                    app:layout_constraintTop_toTopOf="@+id/btn4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn5"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="143dp"
                    android:layout_height="144dp"
                    android:onClick="onClick"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/categoriebg"
                    android:tag="5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img5"
                    android:layout_width="49dp"
                    android:layout_height="61dp"
                    android:src="@drawable/logo"
                    android:tag="img5"
                    app:layout_constraintBottom_toBottomOf="@+id/btn5"
                    app:layout_constraintEnd_toEndOf="@+id/btn5"
                    app:layout_constraintStart_toStartOf="@+id/btn5"
                    app:layout_constraintTop_toTopOf="@+id/btn5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>