<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:background="@drawable/bglogin"
        android:padding="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/NomUtilisateur"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/border"
            android:hint="Nom d'utilisateur"
            android:paddingLeft="3pt"
            android:paddingTop="1pt"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/MotDePasse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Logo" />

        <Button
            android:id="@+id/BtnConnexion"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="Se Connecter"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:backgroundTint="#EF3C56"
            app:layout_constraintBottom_toTopOf="@+id/CreerCompte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MotDePasse" />

        <TextView
            android:id="@+id/CreerCompte"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:text="Créer un compte"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BtnConnexion" />

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="88dp"
            android:layout_height="116dp"
            app:layout_constraintBottom_toTopOf="@+id/NomUtilisateur"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Titre"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quiz"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/MotDePasse"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/border"
            android:hint="Mot de passe"
            android:inputType="textPassword"
            android:paddingLeft="3pt"
            android:paddingTop="1pt"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/BtnConnexion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NomUtilisateur" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>