...
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/laQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextViewww"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
...
